Quick add modal fixes for Desktop (#3488)
* Centre 'view cart' label in quick add modal.

* Remove extra spacing at the bottom of quick order modal.

* Fix the extra underlined space between the 'view full details' text and the arrow.

* Make the product title a link to the product page.

* Tweak breakpoints for consistently when the viewport is exactly 989 or 990 px wide

--- a/assets/quick-add.css
+++ b/assets/quick-add.css
@@ -35,6 +35,10 @@
   transform: none;
 }
 
+.quick-add-modal .quick-order-list__container {
+  padding-bottom: 1.5rem;
+}
+
 .quick-add-modal__content.quick-add-modal__content--bulk {
   width: 90%;
 }
@@ -76,6 +80,10 @@
 
 .quick-add-modal__content img {
   max-width: 100%;
+}
+
+.quick-add-modal__content-info.quick-add-modal__content-info--bulk {
+  padding-bottom: 0;
 }
 
 .quick-add-modal__content-info--bulk h3 {
@@ -132,6 +140,11 @@
   padding-left: 1rem;
 }
 
+.quick-add-modal__content-info--bulk-details > a:hover {
+  text-decoration: underline;
+  text-underline-offset: 0.3rem;
+}
+
 @media screen and (min-width: 990px) {
   .quick-add-modal__content-info--bulk .quick-add__product-media,
   .quick-add-modal__content-info--bulk .quick-add__product-container,
@@ -164,7 +177,7 @@
   width: auto;
 }
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 989px) {
   .quick-add-modal__content-info--bulk .quick-add__content-info__media {
     display: flex;
     margin: 0;
@@ -180,7 +193,7 @@
   }
 }
 
-@media screen and (min-width: 989px) {
+@media screen and (min-width: 990px) {
   .quick-add-modal__content-info--bulk .quick-add__info {
     flex-direction: column;
     position: sticky;
@@ -190,7 +203,7 @@
   }
 }
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 989px) {
   .quick-add-modal__content-info--bulk {
     flex-direction: column;
   }
@@ -264,6 +277,10 @@
 
 quick-add-modal .product:not(.featured-product) .product__view-details {
   display: block;
+}
+
+.quick-add-modal__content--bulk .product__view-details .icon {
+  margin-left: 1.2rem;
 }
 
 quick-add-modal .quick-add-hidden,
